objects/ssot__MasterProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AllowCustomerReturn__c</fullName>
        <label>Allow Customer Return</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AllowPartialRefund__c</fullName>
        <label>Allow Partial Refund</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrandId__c</fullName>
        <label>Brand</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CanUseQuantitySchedule__c</fullName>
        <label>Quantity Scheduling Enabled</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CanUseRevenueSchedule__c</fullName>
        <label>Revenue Scheduling Enabled</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Product Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisposalTypeId__c</fullName>
        <label>Disposal Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceRecordId__c</fullName>
        <label>External Source Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GlAccountCode__c</fullName>
        <label>GL Account Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Master Product Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAutoProvisionable__c</fullName>
        <label>Is Auto Provisionable</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsBackOrdered__c</fullName>
        <label>Is Back Ordered</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCouponRedemptionAllowed__c</fullName>
        <label>Is Coupon Redemption Allowed</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCustomerDiscountAllowed__c</fullName>
        <label>Is Customer Discount Allowed</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDynamicBundle__c</fullName>
        <label>Is Dynamic Bundle</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsFoodstampPaymentAllowed__c</fullName>
        <label>Is Foodstamp Payment Allowed</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsInstallable__c</fullName>
        <label>Is Installable</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsIntellectualPropertyProtected__c</fullName>
        <label>Is Intellectual Property Protected</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsManualPriceEntryRequired__c</fullName>
        <label>Is Manual Price Entry Required</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMultipleCouponsAllowed__c</fullName>
        <label>Is Multiple Coupons Allowed</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPartnerDiscountAllowed__c</fullName>
        <label>Is Partner Discount Allowed</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPreOrderable__c</fullName>
        <label>Is Pre Orderable</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsQualityVerificationRequired__c</fullName>
        <label>Is Quality Verification Required</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsQuantityEntryRequired__c</fullName>
        <label>Is Quantity Entry Required</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRainCheckAllowed__c</fullName>
        <label>Is Rain Check Allowed</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsReturnable__c</fullName>
        <label>Is Returnable</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSellableIndependently__c</fullName>
        <label>Is Sellable Independently</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSellableWithoutPrice__c</fullName>
        <label>Is Sellable Without Price</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSellable__c</fullName>
        <label>Is Sellable</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSerialized__c</fullName>
        <label>Is Serialized</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsWeightEntryRequired__c</fullName>
        <label>Is Weight Entry Required</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsWorkerDiscountAllowed__c</fullName>
        <label>Is Worker Discount Allowed</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LongDescription__c</fullName>
        <label>Product Long Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LotIdentifier__c</fullName>
        <label>Lot Identifier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MSRPAmountCurrency__c</fullName>
        <label>MSRP Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MSRPAmount__c</fullName>
        <label>MSRP Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturerName__c</fullName>
        <label>Manufacturer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MasterProductId__c</fullName>
        <label>Master Product</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumOrderQuantityCount__c</fullName>
        <label>Maximum Order Quantity Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumAdvertisementAmountCurrency__c</fullName>
        <label>Minimum Advertisement Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumAdvertisementAmountStartDate__c</fullName>
        <label>Minimum Advertisement Amount Start Date</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumAdvertisementAmount__c</fullName>
        <label>Minimum Advertisement Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumOrderQuantityCount__c</fullName>
        <label>Minimum Order Quantity Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ModelNumber__c</fullName>
        <label>Model Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModelYear__c</fullName>
        <label>Model Year</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Product Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PackagedInCountry__c</fullName>
        <label>Packaged in Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceChargeTypeId__c</fullName>
        <label>Price Charge Type Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryProductCategory__c</fullName>
        <label>Primary Product Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimarySalesChannelId__c</fullName>
        <label>Primary Sales Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProducedInCountry__c</fullName>
        <label>Produced in Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductSKU__c</fullName>
        <label>Product SKU</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductStatusId__c</fullName>
        <label>Product Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityInstallmentCount__c</fullName>
        <label>Quantity Installment Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityInstallmentPeriodId__c</fullName>
        <label>Quantity Installment Period</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityScheduleTypeId__c</fullName>
        <label>Quantity Schedule Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredDepositAmountCurrency__c</fullName>
        <label>Required Deposit Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredDepositAmount__c</fullName>
        <label>Required Deposit Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredDepositPercentage__c</fullName>
        <label>Required Deposit Percentage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequiresInvididualUnitPricing__c</fullName>
        <label>Requires Individual Unit Pricing</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RevenueInstallmentCount__c</fullName>
        <label>Revenue Installment Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RevenueInstallmentPeriodId__c</fullName>
        <label>Revenue Installment Period</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RevenueScheduleTypeId__c</fullName>
        <label>Revenue Schedule Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RewardProgramPointsCount__c</fullName>
        <label>Reward Program Points Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceEntitlementTemplateId__c</fullName>
        <label>Service Entitlement Template</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StandardWarrantyLengthMonth__c</fullName>
        <label>Standard Warranty Length Month</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StockLedgerValuationAmountCurrency__c</fullName>
        <label>Stock Ledger Valuation Amount Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StockLedgerValuationAmount__c</fullName>
        <label>Stock Ledger Valuation Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ValidForPeriodCount__c</fullName>
        <label>Valid For Period Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ValidForPeriodUOMId__c</fullName>
        <label>Valid For Period Unit Of Measure</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ValidFromDate__c</fullName>
        <label>Valid From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ValidToDate__c</fullName>
        <label>Valid To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761154704_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand_Id_map_MasterProduct_BrandId_N_rel</label>
        <referenceTo>ssot__Brand__dlm</referenceTo>
        <relationshipLabel>Brand_Id_map_MasterProduct_BrandId_N_rel</relationshipLabel>
        <relationshipName>rel_1697761154704_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761155160_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BundleProduct_Id_map_MasterProduct_M_rel</label>
        <referenceTo>ssot__BundleProduct__dlm</referenceTo>
        <relationshipLabel>BundleProduct_Id_map_MasterProduct_M_rel</relationshipLabel>
        <relationshipName>rel_1697761155160_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761174787_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoodsProduct_Id_map_MasterProduct_Ma_rel</label>
        <referenceTo>ssot__GoodsProduct__dlm</referenceTo>
        <relationshipLabel>GoodsProduct_Id_map_MasterProduct_Ma_rel</relationshipLabel>
        <relationshipName>rel_1697761174787_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>